Created folders for images and videos seperately

--- a/exercise.html
+++ b/exercise.html
@@ -96,7 +96,7 @@
     <!-- Card 1 -->
     <div class="col-md-6 col-lg-4">
       <div class="card exercise-card">
-        <img src="./yoga.jpg" class="card-img-top" alt="Yoga">
+        <img src="./images/yoga.jpg" class="card-img-top" alt="Yoga">
         <div class="card-body">
           <h5 class="card-title">Yoga</h5>
           <p class="card-text">Boosts hormone balance, reduces stress and improves flexibility.</p>
@@ -123,7 +123,7 @@
     <!-- Card 2 -->
     <div class="col-md-6 col-lg-4">
       <div class="card exercise-card">
-        <img src="./cardio.jpg" class="card-img-top" alt="Cardio">
+        <img src="./images/cardio.jpg" class="card-img-top" alt="Cardio">
         <div class="card-body">
           <h5 class="card-title">Cardio</h5>
           <p class="card-text">Improves insulin sensitivity and helps with weight management.</p>
@@ -150,7 +150,7 @@
     <!-- Card 3 -->
     <div class="col-md-6 col-lg-4">
       <div class="card exercise-card">
-        <img src="./strength.jpg" class="card-img-top" alt="Strength Training">
+        <img src="./images/strength.jpg" class="card-img-top" alt="Strength Training">
         <div class="card-body">
           <h5 class="card-title">Strength Training</h5>
           <p class="card-text">Builds muscle and supports metabolism, crucial for PCOS health.</p>
