--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     body {
       background-color: #fff7f3;
       font-family: 'Segoe UI', sans-serif;
-      background-image: url("background image.jpg");
+      background-image: url("./images/background\ image.jpg");
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
@@ -149,7 +149,7 @@
   <div class="container my-5">
     <div class="row align-items-center">
       <div class="col-md-6 animate__animated animate__zoomIn">
-        <img src="logo image.jpg" alt="PCOS Banner" class="main-img" />
+        <img src="./images/logo image.jpg" alt="PCOS Banner" class="main-img" />
       </div>
       <div class="col-md-6">
         <div class="info-intro animate__animated animate__fadeInLeft">
